--- a/style.css
+++ b/style.css
@@ -1,17 +1,69 @@
+/* Font Monserrat */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+body{
+    background-color: #E4EBF2;
+    background-repeat: no-repeat;
 }
 
-.fixa-navbar { 
-    position: fixed;
+.carousel-inner{
+    height: 77vh;
+}
+
+.carousel-img1 { 
+background-image: url(img/tpl3.jpg);
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+height: 77vh;
+width: 100%;
+}
+
+.carousel-img2 {
+    background-image: url(img/carousel2.jpg);
+    background-position: 0 -0.1%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 77vh;
     width: 100%;
 }
 
-.ghost {
+.carousel-img3 {
+    background-image: url(img/tpl4.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 77vh;
     width: 100%;
-    height: 50px;
 }
+
+
+/*Main*/
+.titulo-principal {
+    text-align: center;
+    font-size: 2rem;
+    font-family: 'Montserrat', sans-serif;;
+    margin: 50px 0px ;
+}
+
+
+
+.section-chamada {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 1.2rem;
+    font-family: 'Montserrat', sans-serif; 
+    width: 80%;
+    height: 80%;
+}
+
+
+
+
+
+
 
