--- a/style.css
+++ b/style.css
@@ -76,15 +76,40 @@ width: 100%;
 }
 
 /* Planos */
-.grupo-cards{
-    margin: 150px 0; 
-    padding: 50px 30px;
+.container-planos { 
     background-color: #CCD2D9;
-    
+    text-align: center;
+    box-sizing: border-box;
+    padding: 70px;
+}
+
+.card { 
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.37);
+    border-radius: 15px;
+    margin-right: 20px;
+    cursor: pointer;
+}
+
+.card:hover { 
+    transform: scale(1.1);
+    transition: 1s;
+}
+
+.container-planos > h1 { 
+   font-size: 2.3rem;
+}
+
+.grupo-cards{
+    padding: 50px 30px;  
 }
 
 .img-planos { 
     max-height: 400px;
+}
+
+/* contato */
+.contato { 
+
 }
 
 
