--- a/style.css
+++ b/style.css
@@ -77,10 +77,17 @@ width: 100%;
 }
 
 /* Planos */
-.grupo-cards{
-    margin: 50px 0; 
-    padding: 50px 30px;
+.nossos-planos { 
     background-color: #CCD2D9;
+}
+.nossos-planos > h2 { 
+    text-align: center;
+    font-size: 2rem;
+    padding: 25px;
+}
+.grupo-cards{
+    margin: 10px 0; 
+    padding: 50px 30px;
     text-align: center;
     box-sizing: border-box;
     padding: 70px; 
@@ -114,7 +121,9 @@ width: 100%;
 /* contatos */
 .contato-section > h1 {
     text-align: center;
-    margin-bottom: 50px;
+    padding: 50px;
+    margin-bottom: 25px;
+    font-size: 2.5rem;
  }
 
 .msg { 
