--- a/style.css
+++ b/style.css
@@ -230,6 +230,12 @@ form label, form legend {
     border-radius: 15px;
 }
 
+@media screen and (max-width: 700px) { 
+    .container-form { 
+        width: 80%;
+    }
+}
+
 .container-form > h1{
     font-family: 'Montserrat', sans-serif; 
     font-weight: bold;
@@ -245,7 +251,7 @@ form label, form legend {
     justify-content: center;
     margin: 50px auto; 
     gap: 20px;
-    width: 80%;
+    width: 50%;
 }
 
 .links-forms { 
