--- a/style.css
+++ b/style.css
@@ -10,9 +10,18 @@ body{
     margin: 0;
     padding: 0;
 }
+.carousel h5{
+    color: rgb(23, 23, 94);
+    background-color: #CCD2D9;
+}
+
 
 .carousel-inner{
     height: 77vh;
+}
+
+.carousel > button{
+    color: rgb(23, 23, 94);
 }
 
 .carousel-img1 { 
@@ -147,7 +156,7 @@ form label, form legend {
 .enviar {
     width: 100%;
     padding: 15px 0;
-    background: orange;
+    background: rgb(23, 23, 94);
     color: white;
     font-weight: bold;
     font-size: 18px;
@@ -159,7 +168,7 @@ form label, form legend {
 }
 
 .enviar:hover {
-    background: darkorange;
+    background: rgb(23, 23, 94);
     transform: scale(1.1);
 }
 
@@ -230,6 +239,8 @@ form label, form legend {
     border-radius: 15px;
 }
 
+
+
 @media screen and (max-width: 700px) { 
     .container-form { 
         width: 80%;
@@ -265,12 +276,15 @@ form label, form legend {
 .links-forms > a { 
     font-family:  sans-serif;
     font-weight: bold;
-    color: darkorange;
+    color: rgb(23, 23, 94);
 }
 
 .links-forms > a:hover { 
     color: #CCD2D9;
 }
+
+
+
 
 
 
